--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -24,7 +24,7 @@
             <li class="layui-nav-item"><a onclick="show('/productMain/toClassify')">分类管理</a></li>
             <li class="layui-nav-item"><a onclick="show('/productMain/toBrand')">品牌管理</a></li>
             <li class="layui-nav-item"><a onclick="show('/productMain/toType')">类型管理</a></li>
-            <li class="layui-nav-item"><a onclick="show()">商品管理</a></li>
+            <li class="layui-nav-item"><a onclick="show('/productMain/toProduct')">商品管理</a></li>
             <li class="layui-nav-item"><a href="">用户</a></li>
             <li class="layui-nav-item">
                 <a href="javascript:;">其它系统</a>
