--- a/src/main/resources/templates/product/brand.html
+++ b/src/main/resources/templates/product/brand.html
@@ -100,7 +100,7 @@
             , cols: [
                 [
                     {field: 'id', fixed: 'left', title: 'ID', rowspan: "2",hide :"true"}
-                    ,{type: 'checkbox', fixed: 'left', rowspan: "2"},
+                    ,{type: 'checkbox', fixed: 'left', rowspan: "2"}
                     , {field: 'brandName', title: '商品名', rowspan: "2"}
                     ,{field: 'firstLetter', title: '首字母', rowspan: "2"}
                     ,{field: 'sort', title: '排序', rowspan: "2"}
