--- a/src/main/resources/templates/product/type.html
+++ b/src/main/resources/templates/product/type.html
@@ -20,7 +20,7 @@
 </div>
 <script type="text/html" id="showCount">
     <button type="button"onclick="toAttibute0('{{d.id}}')" class="layui-btn layui-btn-warm layui-btn-radius">查看属性</button>
-    <button type="button"onclick="toAttibute1('{{d.id}}')" class="layui-btn layui-btn-warm layui-btn-radius">查看参数</button>
+    <button type="button"onclick='toAttibute1("{{d.id}}")' class="layui-btn layui-btn-warm layui-btn-radius">查看参数</button>
 </script>
 <script type="text/html" id="addTypeHtml">
     <form class="layui-form layui-form-pane" id="addTypeForm">
