--- a/src/main/resources/templates/product/product.html
+++ b/src/main/resources/templates/product/product.html
@@ -2,9 +2,276 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
 </head>
 <body>
-$END$
+<div class="layui-card-header"  style="background: #1e9fff">商品管理</div>
+<div class="layui-card-body">
+    <div class="layui-card-body">
+        <script type="text/html" id="barDemo">
+            <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+            <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+        </script>
+        <table class="layui-hide" id="myTable" lay-filter="myTable"> </table>
+    </div>
+    <script type="text/html" id="myToolbar">
+        <button type="button" class="layui-btn layui-btn-sm layui-btn-green" id = "addClassify" lay-event="add">新增品牌</button>&nbsp;
+    </script>
+</div>
+<script type="text/html" id="addProductHtml">
+    <form class="layui-form layui-form-pane" id="addProductForm">
+        <div class="layui-form-item">
+            <label class="layui-form-label">商品名称</label>
+            <div class="layui-input-block">
+                <input type="text" name="productName" id="productName" autocomplete="off" placeholder="" class="layui-input">
+                <input type="hidden" name="id" id="id" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">价格</label>
+            <div class="layui-input-block">
+                <input type="text" name="price" id="price" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">库存</label>
+            <div class="layui-input-block">
+                <input type="text" name="stock" id="stock" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">单位</label>
+            <div class="layui-input-block">
+                <input type="text" name="unit" id="unit" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">重量</label>
+            <div class="layui-input-block">
+                <input type="text" name="weight" id="weight" autocomplete="off" placeholder="" class="layui-input">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">品牌</label>
+            <div class="layui-input-block">
+                <select name="brandId" id="brandId" lay-filter="aihao">
+
+                </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">一级分类</label>
+            <div class="layui-input-block">
+                <select name="classifyId1" id="classifyId1" lay-filter="aihao">
+
+                </select>
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">二级分类</label>
+            <div class="layui-input-block">
+                <select name="classifyId2" id="classifyId2" lay-filter="aihao">
+
+                </select>
+            </div>
+        </div>
+
+        <div class="layui-upload">
+            <button type="button" class="layui-btn" id="test1">上传图片</button>
+            <div class="layui-upload-list">
+                <img class="layui-upload-img" id="demo1">
+                <input type="text" id="logo" name="logo">
+                <p id="demoText"></p>
+                <div id="showImg">
+                </div>
+            </div>
+        </div>
+    </form>
+</script>
 </body>
+<script>
+    layui.use(['form','table','laydate','upload'],function () {
+        //日期的初始化
+        var laydate = layui.laydate;
+        //表格的初始化
+        var table = layui.table;
+        //表单的初始化
+        var form = layui.form;
+        //文件上传的初始化
+        var upload = layui.upload;
+        myTable = table.render({
+            elem: '#myTable'
+            , url: '/product/queryProductList',
+            page: { //支持传入 laypage 组件的所有参数（某些参数除外，如：jump/elem） - 详见文档
+                layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
+            },
+            toolbar: "#myToolbar",
+            limit: 5,
+            limits: [5, 10, 15]
+            , size: 'lg'
+            , cols: [
+                [
+                    {field: 'id', fixed: 'left', title: 'ID', rowspan: "2"}
+                    , {field: 'productName', title: '商品名称', rowspan: "2"}
+                    , {field: 'classifyName', title: '所属分类', rowspan: "2"}
+                    , {field: 'brandName', title: '品牌', rowspan: "2"}
+                    , {field: 'price', title: '价格', rowspan: "2"}
+                    , {field: "stock", rowspan: "2", title: "库存"}
+                    , {field: "unit", rowspan: "2", title: "单位"}
+                    , {field: "weight", rowspan: "2", title: "重量"}
+                    , {field: 'productImg', rowspan: "2", title: '图片'
+                        , templet: function (d) {
+                            return '<div onclick="photograph(this)"><img src=' + d.productImg + '></div>'
+                        }
+                    }
+                    , {fixed: 'right', rowspan: "2", title: '操作', width: 200, align: 'center', toolbar: '#barDemo'}
+                ],
+            ]
+            , page: true
+        });
+        table.on('toolbar(myTable)', function(obj){
+            var checkStatus = table.checkStatus(obj.config.id);
+            switch(obj.event){
+                case 'add':
+                    layer.open({
+                        type: 1,
+                        content: $("#addProductHtml").html() //这里content是一个普通的String
+                        , area: ["90%", "90%"]
+                        , offset: 'lt',
+                        title: "新增商品"
+                        , btn: ['保存', '关闭']
+                        , yes: function (index, layero) {
+                            $.ajax({
+                                data: $("#addProductForm").serialize(),
+                                type: "post",
+                                dataType: "json",
+                                url: "/brand/addBrand",
+                                success: function (result) {
+                                    if (result.code = 200) {
+                                        table.reload("myTable", {
+                                            page: {
+                                                curr: 1
+                                            }
+                                        })
+                                        layer.closeAll();
+                                    }
+                                },
+                                error: function () {
+                                    alert("新增失败")
+                                }
+
+                            })
+
+                        },
+                        success: function (layero, index) {
+                            queryBrand();
+                            queryClassifyOption1();
+                            fileUpload();
+                            form.render();
+                        }
+                    })
+                    break;
+                default:
+                    break;
+            };
+        });
+
+        function queryClassifyOption1(classifyId1) {
+            $.ajax({
+                type: "post",
+                dataType: "json",
+                url: "/classify/queryClassifyOption",
+                success: function (result) {
+                    var brandOption = "<option value='0'>请选择分类</option>";
+                    for (var i = 0; i < result.length; i++) {
+                        if (result[i].id == classifyId1){
+                            brandOption += "<option value='"+result[i].id+"'selected>"+result[i].classifyName+"</option>";
+                        }else {
+                            brandOption += "<option value='"+result[i].id+"'>"+result[i].brandNclassifyNameame+"</option>";
+                        }
+                    }
+                     $("#classifyId1").html(brandOption);
+                },
+                error: function () {
+                    alert("新增失败")
+                }
+            })
+        }
+        function fileUpload(){
+            upload.render({
+                elem: '#test1'
+                ,url: '/brand/upLoad' //改成您自己的上传接口
+                , accept: 'images'
+                , acceptMime: 'image/*'
+                ,before: function(obj){
+                    //预读本地文件示例，不支持ie8
+                    obj.preview(function(index, file, result){
+                        $('#demo1').attr('src', result); //图片链接（base64）
+                    });
+                }
+                ,done: function(res){
+                    //如果上传失败
+                    if(res.code > 0){
+                        return layer.msg('上传失败');
+                    }else{
+                        //上传成功  保存路径
+                        $("#logo").val(res.img);
+
+                    }
+                }
+                ,error: function(){
+                    //演示失败状态，并实现重传
+                    var demoText = $('#demoText');
+                    demoText.html('<span style="color: #FF5722;">上传失败</span> <a class="layui-btn layui-btn-xs demo-reload">重试</a>');
+                    demoText.find('.demo-reload').on('click', function(){
+                        uploadInst.upload();
+                    });
+                }
+            });
+
+        }
+    })
+    function queryBrand(brandId) {
+        $.ajax({
+            type: "post",
+            dataType: "json",
+            url: "/brand/queryBrandOption",
+            success: function (result) {
+                var brandOption = "<option value='0'>请选择品牌</option>";
+                for (var i = 0; i < result.length; i++) {
+                    if (result[i].id == brandId){
+                        brandOption += "<option value='"+result[i].id+"'selected>"+result[i].brandName+"</option>";
+                    }else {
+                        brandOption += "<option value='"+result[i].id+"'>"+result[i].brandName+"</option>";
+                    }
+                }
+                alert(brandOption)
+                $("#brandId").html(brandOption);
+            },
+            error: function () {
+                alert("新增失败")
+            }
+        })
+    }
+</script>
+<!--设置图片样式-->
+<!--设置图片样式-->
+<style type="text/css">
+
+    .layui-table-cell{
+
+        text-align:center;
+
+        height: auto;
+
+        white-space: normal;
+
+    }
+    .layui-table img{
+
+        max-width:30px
+
+    }
+</style>
+
 </html>
